--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <nav>
         <div id="nav-bar">
             <div class="logo">
-                <a href="#">BG</a>
+                <a href="./index.html">BG</a>
             </div>
             <div class="links">
                 <ul>
-                    <li><a href="#">BOOKS</a></li>
+                    <li><a href="./books.html">BOOKS</a></li>
                     <li><a href="#">WORK</a></li>
                     <li><a href="#">INFO</a></li>
                 </ul>
@@ -31,11 +31,34 @@
 
     <section id="hero">
         <div class="hero-name">
-            <h1><a href="#">BERNARDO</a></h1>
-            <h2>Software engineer</h2>
+            <h1><a href="./index.html">BERNARDO</a></h1>
+            <h2>Programmer</h2>
         </div>
     </section>
 
+    <section id="projects">
+        <div class="title-projects">
+            <span>Check out</span>
+            <h2>My projects</h2>
+        </div>
+    </section>
+
+    <section id="project1">
+        <div class="imgs">
+            <div class="img1">
+                <a href="#"><img src="./Assets/TinDog.png" alt="TinDog website"></a>
+                <a href="#">TinDog</a>
+            </div>
+            <div class="img2">
+                <a href="#"><img src="./Assets/Mondrian Project.png" alt="mondrian flag"></a>
+                <a href="#">Mondrian Flag</a>
+            </div>
+            <div class="img3">
+            <a href="https://bernardogoncalvess.github.io/html-portfolio/"><img src="./Assets/1st portfolio.png" alt="html portfolio"></a>
+                <a href="https://bernardogoncalvess.github.io/html-portfolio/">1st Portfolio</a>
+            </div>
+        </div>
+    </section>
 
     <section id="info">
         <div class="container">
@@ -44,43 +67,23 @@
         </div>
     </section>
 
-    <section id="projects">
-        <div class="title-projects">
-            <h2>Here's some of my projects</h2>
-        </div>
-    </section>
-
-    <section id="project1">
-        <div class="imgs">
-            <div class="img1">
-                <img src="./Assets/TinDog.png" alt="TinDog website">
-                <a href="#">TinDog</a>
-            </div>
-            <div class="img2">
-                <img src="./Assets/Mondrian Project.png" alt="mondrian flag">
-                <a href="Mondrian Flag">Mondrian Flag</a>
-            </div>
-            <div class="img3">
-                <img src="./Assets/1st portfolio.png" alt="html portfolio">
-                <a href="1st Portfolio">1st Portfolio</a>
-            </div>
-        </div>
-    </section>
+    <hr>
 
     <footer>
         <div class="quick-links">
             <div class="links-footer">
                 <ul>
-                    <li><a href="#">Books</a></li>
+                    <li><a href="./books.html">Books</a></li>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Info</a></li>
                 </ul>
             </div>
         </div>
         <div class="copywrite">
-            <p>All rights reserved©</p>
+            <p>©All rights reserved</p>
             <p>Bernardo Goncalves</p>
         </div>
     </footer>
+
 </body>
 </html>
